--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&display=swap');
 
 @import "tailwindcss";
 
 
+* {
+  font-family: 'JetBrains Mono', monospace;
+}
 
 
 /* mano che saluta nella navbar*/
